cabal-version:      2.4
name:               echo
version:            0.1.0.0
license:            MIT

synopsis:           Just a HTTP requests logger
description:        Simple HTTP server to log every incoming requests
author:             Vadim Iskuchekov @egregors
maintainer:         egregors@pm.me

category:           Web
extra-source-files: CHANGELOG.md

executable echo
    main-is:          Main.hs

    other-extensions: OverloadedStrings

    build-depends:    base ^>=4.14.1.0
                    , http-types
                    , scotty
                    , wai-extra
    hs-source-dirs:   app
    default-language: Haskell2010
